# Heirloom

./: .env.example  .env.production.example  .gitignore  A11Y_AUDIT.md  ART_DIRECTION.md  BETA_READINESS_COMPLETE.md  BETA_READINESS_PLAN.md  CLAUDE.md  CONTENT_12_WEEKS.md  CONTENT_CALENDAR_2025.md  DATABASE_AUDIT.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DESIGN.md  DESIGN_BRIEF.md  EXTERNAL_API_AUDIT.md  FEATURE_ENHANCEMENTS.md  FINAL_DEPLOYMENT_SUMMARY.md  FRONTEND_AUDIT.md  FUNCTIONALITY_DOCUMENTATION.md  Heirloom_Design.html  INTERFACE_IMPLEMENTATION_GUIDE.md  LAUNCH_READINESS.md  MARKETING_READINESS.md  MOBILE_APP_GUIDE.md  MOBILE_PWA_AUDIT.md  PERFORMANCE_AUDIT.md  PERFORMANCE_GUIDE.md  PRIVACY_POLICY.md  PRODUCT.md  PRODUCTION_BUILD_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  README.md  REGISTRATION.md  REMAINING_ISSUES.md  RESILIENCE_AUDIT.md  SECURITY_AUDIT.md  SECURITY_BUG_REPORT.md  (+37 more)
backend/: .env.example  Dockerfile  README.md  init_db.py  package-lock.json  package.json  pyproject.toml  test-simple.js  vitest.config.ts
backend/app/: auth.py  compression.py  database.py  db_connection.py  db_models.py  encryption.py  entitlements.py  main.py  main_old.py  models.py  repository.py  sentiment.py
backend/prisma/: schema.prisma
backend/scripts/: seed_comprehensive.py  seed_staging.py
backend/src/: basic-server.ts  minimal-server.ts  payment-server.js  server.ts  simple-server.ts  test-server.ts
backend/src/config/: database.ts  env.test.ts  env.ts  redis.ts
backend/src/middleware/: auth.middleware.ts  error.middleware.ts  (+1 more)
(+1337 files in other folders)
